virtualization: Readd sync-options to HCO CR

--- a/virtualization/manifests/hco.yaml
+++ b/virtualization/manifests/hco.yaml
@@ -3,6 +3,7 @@ apiVersion: hco.kubevirt.io/v1beta1
 metadata:
   annotations:
     deployOVS: "false"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "3"
   name: kubevirt-hyperconverged
   namespace: openshift-cnv
