--- a/demo-vm/manifests/demo-vm.yaml
+++ b/demo-vm/manifests/demo-vm.yaml
@@ -3,7 +3,7 @@ kind: VirtualMachine
 metadata:
   name: demo-vm
 spec:
-  running: true
+  running: false
   dataVolumeTemplates:
   - metadata:
       name: demo-vm-ds-fedora
