--- a/applicationsets/virtualization/applicationset-virtualization.yaml
+++ b/applicationsets/virtualization/applicationset-virtualization.yaml
@@ -5,7 +5,11 @@ metadata:
   namespace: openshift-gitops
 spec:
   generators:
-  - clusters: {}
+  # Only select external clusters, excludes local cluster
+  - clusters:
+      selector:
+        matchLabels:
+          argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: "{{nameNormalized}}-virtualization"
