Move demo-vm to kustomize

--- a/acm-gitops-integration/placement.yaml
+++ b/acm-gitops-integration/placement.yaml
@@ -6,3 +6,12 @@ metadata:
 spec:
   clusterSets:
     - managed
+  predicates:
+    - requiredClusterSelector:
+        labelSelector:
+          matchExpressions:
+            - key: env
+              operator: In
+              values:
+                - dev
+                - prod
