--- a/applicationsets/cdi/applicationset-cdi.yaml
+++ b/applicationsets/cdi/applicationset-cdi.yaml
@@ -5,7 +5,11 @@ metadata:
   namespace: argocd
 spec:
   generators:
-  - clusters: {}
+  # Only select external clusters, excludes local cluster
+  - clusters:
+      selector:
+        matchLabels:
+          argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: "{{nameNormalized}}-cdi"
