--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -20,7 +20,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: false
+  running: true
   template:
     metadata:
       annotations:
