--- a/applications/demo-linux-vm/manifests/base-config/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/base-config/fedora-vm.yaml
@@ -20,7 +20,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: true
+  running: false
   template:
     metadata:
       annotations:
