--- a/applications/demo-linux-vm/manifests/hot-plug-datavolume.yaml
+++ b/applications/demo-linux-vm/manifests/hot-plug-datavolume.yaml
@@ -9,6 +9,7 @@ metadata:
     blockOwnerDeletion: false
     kind: VirtualMachine
     name: fedora-demo-vm
+    uid: c8fecb45-cb1a-4c8b-93b1-623784b182aa
 spec:
   storage:
     resources:
