--- a/applications/demo-linux-vm/manifests/hot-plug-disk/hot-plug-datavolume.yaml
+++ b/applications/demo-linux-vm/manifests/hot-plug-disk/hot-plug-datavolume.yaml
@@ -9,6 +9,7 @@ metadata:
     blockOwnerDeletion: false
     kind: VirtualMachine
     name: fedora-demo-vm
+    uid: 76f51e2d-3830-4607-a3e9-9cfc01554b6e
 spec:
   storage:
     resources:
