--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -21,7 +21,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: true
+  running: false
   template:
     metadata:
       annotations:
@@ -46,9 +46,6 @@ spec:
             - disk:
                 bus: virtio
               name: cloudinitdisk
-            - disk:
-                bus: scsi
-              name: hot-plug-disk
           interfaces:
             - macAddress: '02:a4:1a:00:00:19'
               masquerade: {}
@@ -84,7 +81,3 @@ spec:
               chpasswd:
                 expire: false
           name: cloudinitdisk
-        - dataVolume:
-            hotpluggable: true
-            name: fedora-demo-vm-hot-plug-disk
-          name: hot-plug-disk
