--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: koray
   labels:
     app: fedora-demo-vm
+  annotations:
+    argocd.argoproj.io/sync-wave: "99"
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
@@ -45,9 +47,6 @@ spec:
             - disk:
                 bus: virtio
               name: cloudinitdisk
-            - disk:
-                bus: scsi
-              name: hot-plug-disk
           interfaces:
             - macAddress: '02:a4:1a:00:00:19'
               masquerade: {}
@@ -83,7 +82,4 @@ spec:
               chpasswd:
                 expire: false
           name: cloudinitdisk
-        - dataVolume:
-            hotpluggable: true
-            name: fedora-demo-vm-hot-plug-disk
-          name: hot-plug-disk
+
