--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -47,6 +47,9 @@ spec:
             - disk:
                 bus: virtio
               name: cloudinitdisk
+            - disk:
+                bus: scsi
+              name: hot-plug-disk
           interfaces:
             - macAddress: '02:a4:1a:00:00:19'
               masquerade: {}
@@ -82,4 +85,7 @@ spec:
               chpasswd:
                 expire: false
           name: cloudinitdisk
-
+        - dataVolume:
+            hotpluggable: true
+            name: fedora-demo-vm-hot-plug-disk
+          name: hot-plug-disk
