--- a/applications/demo-linux-vm/manifests/hot-plug-nic/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/hot-plug-nic/fedora-vm.yaml
@@ -72,7 +72,7 @@ spec:
         - name: default
           pod: {}
         - multus:
-            networkName: koray/l2-network
+            networkName: koray/demo-l2-network
           name: nic-hotplug-demo
       terminationGracePeriodSeconds: 180
       volumes:
