--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -22,7 +22,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: true
+  running: false
   template:
     metadata:
       annotations:
@@ -52,6 +52,8 @@ spec:
               masquerade: {}
               model: virtio
               name: default
+            - bridge: {}
+              name: nic-2
           networkInterfaceMultiqueue: true
           rng: {}
         features:
@@ -69,6 +71,9 @@ spec:
       networks:
         - name: default
           pod: {}
+        - multus:
+            networkName: koray/demo-l2-network
+          name: nic-2
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
