--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -22,7 +22,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: false
+  running: true
   template:
     metadata:
       annotations:
@@ -52,8 +52,6 @@ spec:
               masquerade: {}
               model: virtio
               name: default
-            - bridge: {}
-              name: nic-2
           networkInterfaceMultiqueue: true
           rng: {}
         features:
@@ -71,9 +69,6 @@ spec:
       networks:
         - name: default
           pod: {}
-        - multus:
-            networkName: koray/demo-l2-network
-          name: nic-2
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
