--- a/applications/demo-linux-vm/manifests/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/fedora-vm.yaml
@@ -52,6 +52,9 @@ spec:
               masquerade: {}
               model: virtio
               name: default
+            - bridge: {}
+              macAddress: '02:a4:1a:00:00:32'
+              name: nic-hotplug-demo
           networkInterfaceMultiqueue: true
           rng: {}
         features:
@@ -69,6 +72,9 @@ spec:
       networks:
         - name: default
           pod: {}
+        - multus:
+            networkName: koray/demo-l2-network
+          name: nic-hotplug-demo
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
