--- a/applications/demo-networking/manifests/demo-linux-vm2.yaml
+++ b/applications/demo-networking/manifests/demo-linux-vm2.yaml
@@ -98,4 +98,10 @@ spec:
               password: fedora
               chpasswd:
                 expire: false
+              packages:
+                - qemu-guest-agent
+                - nginx
+              runcmd:
+                - systemctl enable --now qemu-guest-agent
+                - systemctl enable --now nginx
           name: cloudinitdisk
