--- a/applications/demo-networking/manifests/demo-linux-vm1.yaml
+++ b/applications/demo-networking/manifests/demo-linux-vm1.yaml
@@ -2,7 +2,7 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: fedora-demo-vm1
-  namespace: koray
+  namespace: networking-demo-project1
   labels:
     app: fedora-demo-vm1
   annotations:
@@ -52,10 +52,6 @@ spec:
               masquerade: {}
               model: virtio
               name: default
-            - bridge: {}
-              macAddress: '02:a4:1a:00:00:48'
-              model: virtio
-              name: nic-2
           networkInterfaceMultiqueue: true
           rng: {}
         features:
@@ -73,25 +69,12 @@ spec:
       networks:
         - name: default
           pod: {}
-        - multus:
-            networkName: demo-l2-network
-          name: nic-2
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
             name: fedora-demo-vm1
           name: rootdisk
         - cloudInitNoCloud:
-            networkData: |
-              network:
-                config:
-                  - name: eth1
-                    subnets:
-                      - address: 192.168.0.20
-                        netmask: 255.255.255.0
-                        type: static
-                    type: physical
-                version: 1
             userData: |
               #cloud-config
               user: fedora
