--- a/applications/demo-networking/manifests/demo-l2-network-nad1.yaml
+++ b/applications/demo-networking/manifests/demo-l2-network-nad1.yaml
@@ -2,7 +2,7 @@ apiVersion: k8s.cni.cncf.io/v1
 kind: NetworkAttachmentDefinition
 metadata:
   name: demo-l2-network
-  namespace: koray
+  namespace: networking-demo-project1
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
@@ -13,5 +13,5 @@ spec:
             "type": "ovn-k8s-cni-overlay", 
             "topology":"layer2", 
             "mtu": 1300, 
-            "netAttachDefName": "koray/demo-l2-network" 
+            "netAttachDefName": "networking-demo-project1/demo-l2-network" 
     }
