--- a/applications/demo-networking/manifests/demo-linux-vm2.yaml
+++ b/applications/demo-networking/manifests/demo-linux-vm2.yaml
@@ -2,11 +2,11 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: fedora-demo-vm2
-  namespace: koray
+  namespace: networking-demo-project2
   labels:
     app: fedora-demo-vm2
   annotations:
-    argocd.argoproj.io/sync-wave: "95"
+    argocd.argoproj.io/sync-wave: "90"
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
