--- a/applications/demo-networking/manifests/base-config/demo-linux-vm2.yaml
+++ b/applications/demo-networking/manifests/base-config/demo-linux-vm2.yaml
@@ -1,10 +1,10 @@
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
-  name: fedora-demo-vm1
-  namespace: networking-demo-project1
+  name: fedora-demo-vm2
+  namespace: networking-demo-project2
   labels:
-    app: fedora-demo-vm1
+    app: fedora-demo-vm2
   annotations:
     argocd.argoproj.io/sync-wave: "90"
 spec:
@@ -12,7 +12,7 @@ spec:
     - apiVersion: cdi.kubevirt.io/v1beta1
       kind: DataVolume
       metadata:
-        name: fedora-demo-vm1
+        name: fedora-demo-vm2
       spec:
         sourceRef:
           kind: DataSource
@@ -30,7 +30,7 @@ spec:
         vm.kubevirt.io/os: fedora
         vm.kubevirt.io/workload: server
       labels:
-        kubevirt.io/domain: fedora-demo-vm1
+        kubevirt.io/domain: fedora-demo-vm2
         kubevirt.io/size: small
     spec:
       architecture: amd64
@@ -48,12 +48,13 @@ spec:
                 bus: virtio
               name: cloudinitdisk
           interfaces:
-            - macAddress: '02:a4:1a:00:00:20'
+            - macAddress: '02:a4:1a:00:00:21'
               masquerade: {}
               model: virtio
               name: default
             - bridge: {}
-              macAddress: '02:a4:1a:00:00:48'
+              macAddress: '02:a4:1a:00:00:49'
+              model: virtio
               name: nic-2
           networkInterfaceMultiqueue: true
           rng: {}
@@ -73,18 +74,34 @@ spec:
         - name: default
           pod: {}
         - multus:
-            networkName: networking-demo-project1/demo-l2-network
+            networkName: demo-l2-network
           name: nic-2
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: fedora-demo-vm1
+            name: fedora-demo-vm2
           name: rootdisk
         - cloudInitNoCloud:
+            networkData: |
+              network:
+                config:
+                  - name: eth1
+                    subnets:
+                      - address: 192.168.0.21
+                        netmask: 255.255.255.0
+                        type: static
+                    type: physical
+                version: 1
             userData: |
               #cloud-config
               user: fedora
               password: fedora
               chpasswd:
                 expire: false
+              packages:
+                - qemu-guest-agent
+                - nginx
+              runcmd:
+                - systemctl enable --now qemu-guest-agent
+                - systemctl enable --now nginx
           name: cloudinitdisk
