--- a/applications/demo-networking/manifests/multinetworkpolicy-ingress-allow-from-vm1-to-vm2-port-80.yaml
+++ b/applications/demo-networking/manifests/multinetworkpolicy-ingress-allow-from-vm1-to-vm2-port-80.yaml
@@ -16,5 +16,7 @@ spec:
       ports:
         - port: 80
           protocol: TCP
+        - port: 443
+          protocol: TCP
   policyTypes:
     - Ingress
