--- a/applications/demo-windows-vmpool/manifests/windows-vm.yaml
+++ b/applications/demo-windows-vmpool/manifests/windows-vm.yaml
@@ -2,6 +2,7 @@ apiVersion: pool.kubevirt.io/v1alpha1
 kind: VirtualMachinePool
 metadata:
   name: vm-pool-windows
+  namespace: demo-windows-vmpool
 spec:
   replicas: 1
   selector:
