--- a/applications/demo-windows-k8s-networking/application.yaml
+++ b/applications/demo-windows-k8s-networking/application.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-windows-vmpool
+  name: demo-windows-k8s-netwoking
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: demo-windows-vmpool
+    namespace: demo-windows-k8s-networking
   project: default
   source:
     repoURL: https://gitea.apps.openshift.demoes.live/demo-user/gitops-demo.git
-    path: applications/demo-windows-vmpool/manifests
+    path: applications/demo-windows-k8s-networking/manifests
     targetRevision: HEAD
   syncPolicy:
     syncOptions:
