--- a/applications/demo-linux-vm/manifests/base-config/fedora-vm.yaml
+++ b/applications/demo-linux-vm/manifests/base-config/fedora-vm.yaml
@@ -2,7 +2,7 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: fedora-demo-vm
-  namespace: koray
+  namespace: demo-vm-basics
   labels:
     app: fedora-demo-vm
   annotations:
@@ -22,7 +22,7 @@ spec:
           resources:
             requests:
               storage: 30Gi
-  running: false
+  runStrategy: RerunOnFailure
   template:
     metadata:
       annotations:
