--- a/applications/demo-windows-vm/application.yaml
+++ b/applications/demo-windows-vm/application.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: koray
+    namespace: demo-vm-basics
   project: default
   source:
     repoURL: https://gitea.apps.openshift.demoes.live/demo-user/gitops-demo.git
