--- a/applications/demo-linux-k8s-networking/manifests/linux-vmpool-with-probes.yaml
+++ b/applications/demo-linux-k8s-networking/manifests/linux-vmpool-with-probes.yaml
@@ -32,7 +32,7 @@ spec:
               resources:
                 requests:
                   storage: 30Gi
-      runStrategy: RerunOnFailure
+      running: true
       template:
         metadata:
           annotations:
