deny only to vm2

--- a/applications/02-demo-networking/manifests/multinetworkpolicy-ingress-deny-all-to-vm2.yaml
+++ b/applications/02-demo-networking/manifests/multinetworkpolicy-ingress-deny-all-to-vm2.yaml
@@ -3,10 +3,12 @@ kind: MultiNetworkPolicy
 metadata:
   annotations:
     k8s.v1.cni.cncf.io/policy-for: demo-l2-network
-  name: deny-all
+  name: deny-all-to-vm2
   namespace: networking-demo-project2
 spec:
-  podSelector: {}
+  podSelector:
+    matchLabels:
+      vm.kubevirt.io/name: fedora-demo-vm2
   ingress: []
   policyTypes:
     - Ingress
