vm2 to vm2 only port 80

--- a/applications/02-demo-networking/manifests/multinetworkpolicy-ingress-allow-from-vm1-to-vm2-port-80.yaml
+++ b/applications/02-demo-networking/manifests/multinetworkpolicy-ingress-allow-from-vm1-to-vm2-port-80.yaml
@@ -3,12 +3,18 @@ kind: MultiNetworkPolicy
 metadata:
   annotations:
     k8s.v1.cni.cncf.io/policy-for: demo-l2-network
-  name: deny-all-to-vm2
+  name: allow-from-vm1-to-vm2-port-80
   namespace: networking-demo-project2
 spec:
   podSelector:
     matchLabels:
       vm.kubevirt.io/name: fedora-demo-vm2
-  ingress: []
+  ingress:
+    - from:
+      - ipBlock:
+          cidr: 192.168.0.20/32
+      ports:
+        - port: 80
+          protocol: TCP
   policyTypes:
     - Ingress
