--- a/applications/03-demo-k8s-features/manifests/linux-vmpool-with-probes-and-affinity.yaml
+++ b/applications/03-demo-k8s-features/manifests/linux-vmpool-with-probes-and-affinity.yaml
@@ -46,6 +46,24 @@ spec:
             app.kubernetes.io/part-of: vmpool-linux
             app: demo-k8s-features
         spec:
+          affinity:
+            nodeAffinity: #This rule ensures the VMs must ONLY be placed on nodes where the key performance contains the value high
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: performance
+                        operator: In
+                        values:
+                          - high
+            podAntiAffinity: #This rule ensures that two VMs with the key app.kubernetes.io/part-of equals to vmpool-linux cannot run on the same zone
+              preferredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                      - key: app.kubernetes.io/part-of
+                        operator: In
+                        values:
+                          - vmpool-linux
+                  topologyKey: topology.kubernetes.io/zone
           livenessProbe:
             initialDelaySeconds: 60
             periodSeconds: 5
