--- a/applications/demo-windows-vmpool/manifests/windows-vmpool.yaml
+++ b/applications/demo-windows-vmpool/manifests/windows-vmpool.yaml
@@ -42,6 +42,8 @@ spec:
             kubevirt.io/size: medium
             kubevirt.io/vmpool: vmpool-windows
         spec:
+          nodeSelector:
+            part-of: windows-cluster
           architecture: amd64
           domain:
             clock:
