--- a/applications/demo-parksmap/manifests/mongodb-service.yaml
+++ b/applications/demo-parksmap/manifests/mongodb-service.yaml
@@ -9,6 +9,7 @@ metadata:
     component: mongodb
     role: database
   name: mongodb
+  namespace: demo-parksmap
 spec:
   ports:
     - name: mongo
