--- a/applications/demo-parksmap/application.yaml
+++ b/applications/demo-parksmap/application.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: demo-parksmap-project
+    namespace: demo-parksmap
   project: default
   source:
     repoURL: https://gitea.apps.openshift.demoes.live/demo-user/gitops-demo.git
