--- a/applications/demo-windows-vmpool/manifests/hpa.yaml
+++ b/applications/demo-windows-vmpool/manifests/hpa.yaml
@@ -10,4 +10,7 @@ spec:
     apiVersion: pool.kubevirt.io/v1alpha1
     kind: VirtualMachinePool
     name: vmpool-windows
-  targetCPUUtilizationPercentage: 25
+  targetCPUUtilizationPercentage: 40
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 30
